fix video background preview on mobile

--- a/src/scss/partials/_video.scss
+++ b/src/scss/partials/_video.scss
@@ -77,6 +77,7 @@
     @include at-mobile {
       float:left;
       clear:left;
+      background:transparent;
     }
     
     .slideshow &, .overview & {
